--- a/index.html
+++ b/index.html
@@ -1090,10 +1090,10 @@
         <div class="container">
             <div class="footer-content">
                 <a href="#" class="footer-logo">
-                    <i class="fas fa-rocket"></i>
-                    <span>BlueWave</span>
+                    💩
+                    <span>exec.cc</span>
                 </a>
-                <p class="footer-description">Мы создаем инновационные цифровые решения, которые помогают бизнесу расти и развиваться в современном мире.</p>
+                <p class="footer-description">Я лучше всех делаю минет и трахась за 1 копейку - экзек.</p>
                 <div class="social-links">
                     <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
@@ -1107,7 +1107,7 @@
                     <a href="#" class="footer-link">FAQ</a>
                     <a href="#" class="footer-link">Вакансии</a>
                 </div>
-                <p class="copyright">© 2023 BlueWave. Все права защищены.</p>
+                <p class="copyright">© 2025 exec.cc. Все права защищены.</p>
             </div>
         </div>
     </footer>
