--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
         </div>
     </section>
 
-    <!-- Features Section -->
+    <!-- гавно подсос фаршмак -->
     <section class="section" id="features">
         <div class="container">
             <h2 class="section-title fade-in">Шахтеринатор <span>3000</span></h2>
