--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>libmysql</title>
-    <!-- Font Awesome -->
+    <!-- иконки Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- (Inter + Poppins) -->
+    <!-- шрифт : (Inter + Poppins) -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -937,10 +937,10 @@
             <nav id="mainNav">
                 <ul>
                     <li><a href="#home" class="active">Главная</a></li>
-                    <li><a href="#features">Возможности</a></li>
-                    <li><a href="#about">О нас</a></li>
-                    <li><a href="#contact">Контакты</a></li>
-                    <li><a href="#" class="nav-cta">Начать</a></li>
+                    <li><a href="#features">Пидор экзек</a></li>
+                    <li><a href="#about">О шахте</a></li>
+                    <li><a href="#contact">Военком</a></li>
+                    <li><a href="bilet-minet.html" class="nav-cta">Билет-Минет!</a></li>
                 </ul>
             </nav>
         </div>
@@ -956,6 +956,7 @@
                 <div class="hero-buttons slide-up delay-3">
                     <a href="#features" class="btn btn-primary"><i class="fas fa-star"></i> стать пидором</a>
                     <a href="#contact" class="btn btn-secondary"><i class="fas fa-envelope"></i> послать шахтера</a>
+                    <a href="bilet-minet.html" class="btn btn-secondary"><i class="fas fa-dice"></i> казик меллстроя бета 0.1v</a>
                 </div>
             </div>
         </div>
