--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
                 <div class="logo-icon">
                     💩
                 </div>
-                <span>exec.cc</span>
+                <span>exechack.cc</span>
             </a>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -1092,7 +1092,7 @@
             <div class="footer-content">
                 <a href="#" class="footer-logo">
                     💩
-                    <span>exec.cc</span>
+                    <span>exechack.cc</span>
                 </a>
                 <p class="footer-description">Я лучше всех делаю минет и трахась за 1 копейку - экзек.</p>
                 <div class="social-links">
@@ -1108,7 +1108,7 @@
                     <a href="#" class="footer-link">FAQ</a>
                     <a href="#" class="footer-link">Вакансии</a>
                 </div>
-                <p class="copyright">© 2025 exec.cc. Все права защищены.</p>
+                <p class="copyright">© 2025 exechack.cc. Все права защищены.</p>
             </div>
         </div>
     </footer>
