--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
                     <li><a href="#features">Пидор экзек</a></li>
                     <li><a href="#about">О шахте</a></li>
                     <li><a href="#contact">Военком</a></li>
-                    <li><a href="bilet-minet.html" class="nav-cta">Билет-Минет!</a></li>
+                    <li><a href="lb.html" class="nav-cta">Lucky Balloon</a></li>
                 </ul>
             </nav>
         </div>
@@ -956,7 +956,7 @@
                 <div class="hero-buttons slide-up delay-3">
                     <a href="#features" class="btn btn-primary"><i class="fas fa-star"></i> стать пидором</a>
                     <a href="#contact" class="btn btn-secondary"><i class="fas fa-envelope"></i> послать шахтера</a>
-                    <a href="bilet-minet.html" class="btn btn-secondary"><i class="fas fa-dice"></i> казик меллстроя бета 0.1v</a>
+                    <a href="lb.html" class="btn btn-secondary"><i class="fas fa-dice"></i> ебнутый шарик</a>
                 </div>
             </div>
         </div>
