--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
                     <li><a href="#features">Пидор экзек</a></li>
                     <li><a href="#about">О шахте</a></li>
                     <li><a href="#contact">Военком</a></li>
-                    <li><a href="lb.html" class="nav-cta">Lucky Balloon</a></li>
+                    <li><a href="lb.html">Lucky Balloon</a></li>
                 </ul>
             </nav>
         </div>
