--- a/index.html
+++ b/index.html
@@ -936,9 +936,9 @@
             
             <nav id="mainNav">
                 <ul>
-                    <li><a href="#home" class="active">About</a></li>
-                    <li><a href="#features">Services</a></li>
-                    <li><a href="lb.html">Gradientf</a></li>
+                    <li><a href="#features" class="active">About</a></li>
+                    <li><a href="#about">Services</a></li>
+                    <li><a href="gradientf.html">Gradientf</a></li>
                 </ul>
             </nav>
         </div>
@@ -953,8 +953,8 @@
                 <p class="hero-description slide-up delay-2">I create websites with interesting UI/UX using mainly EJS/NodeJS/CSS/JS/HTML.</p>
                 <div class="hero-buttons slide-up delay-3">
                     <a href="#features" class="btn btn-primary"><i class="fas fa-star"></i> About</a>
-                    <a href="#contact" class="btn btn-secondary"><i class="fas fa-envelope"></i> Services</a>
-                    <a href="lb.html" class="btn btn-secondary"><i class="fas fa-dice"></i> Gradientf</a>
+                    <a href="#about" class="btn btn-secondary"><i class="fa-solid fa-cart-shopping"></i> Services</a>
+                    <a href="gradientf.html" class="btn btn-secondary"><i class="fa-solid fa-palette"></i> Gradientf</a>
                 </div>
             </div>
         </div>
@@ -963,7 +963,7 @@
     <!-- гавно подсос фаршмак -->
     <section class="section" id="features">
         <div class="container">
-            <h2 class="section-title fade-in">Шахтеринатор <span>3000</span></h2>
+            <h2 class="section-title fade-in">About</h2>
             <div class="cards-grid">
                 <!-- 1 -->
                 <div class="card fade-in delay-1">
