--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@
             <div class="footer-content">
                 <a href="#" class="footer-logo">
                     <i class="fas fa-code"></i>
-                    <span>elibmysql</span>
+                    <span>libmysql</span>
                 </a>
                 <p class="footer-description">libmysql - Code is art</p>
                 <div class="social-links">
