--- a/index.html
+++ b/index.html
@@ -942,6 +942,7 @@
                 <ul>
                     <li><a href="#features" class="active">About</a></li>
                     <li><a href="#about">Services</a></li>
+                    <li><a href="lol.html">Petya</a></li>
                     <li><a href="gradientf.html">Gradientf</a></li>
                 </ul>
             </nav>
@@ -958,6 +959,7 @@
                 <div class="hero-buttons slide-up delay-3">
                     <a href="#features" class="btn btn-primary"><i class="fas fa-star"></i> About</a>
                     <a href="#about" class="btn btn-secondary"><i class="fa-solid fa-cart-shopping"></i> Services</a>
+                    <a href="lol.html" class="btn btn-secondary"><i class="fa-solid fa-skull"></i> Petya</a>
                     <a href="gradientf.html" class="btn btn-secondary"><i class="fa-solid fa-palette"></i> Gradientf</a>
                 </div>
             </div>
