--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
                 <ul>
                     <li><a href="#features" class="active">About</a></li>
                     <li><a href="#about">Services</a></li>
-                    <li><a href="lol.html">Petya</a></li>
+                    <li><a href="libmysql64.html">libmysql64</a></li>
                     <li><a href="gradientf.html">Gradientf</a></li>
                 </ul>
             </nav>
@@ -959,7 +959,7 @@
                 <div class="hero-buttons slide-up delay-3">
                     <a href="#features" class="btn btn-primary"><i class="fas fa-star"></i> About</a>
                     <a href="#about" class="btn btn-secondary"><i class="fa-solid fa-cart-shopping"></i> Services</a>
-                    <a href="lol.html" class="btn btn-secondary"><i class="fa-solid fa-skull"></i> Petya</a>
+                    <a href="libmysql64.html" class="btn btn-secondary"><i class="fa-solid fa-skull"></i> libmysql64</a>
                     <a href="gradientf.html" class="btn btn-secondary"><i class="fa-solid fa-palette"></i> Gradientf</a>
                 </div>
             </div>
@@ -1014,7 +1014,7 @@
                         <p>on Github Pages I also add various useful sites - utilities, from software I created NucleusKMS using the BATCH programming language. You can download NucleusKMS on nucleuskms.github.io</p>
                         <div class="stats">
                             <div class="stat fade-in delay-2">
-                                <div class="stat-number">3</div>
+                                <div class="stat-number">5</div>
                                 <div class="stat-text">Completed projects</div>
                             </div>
                             <div class="stat fade-in delay-3">
