--- a/updates.html
+++ b/updates.html
@@ -85,7 +85,7 @@
     <div class="container">
         <header>
             <h1>libmysql64 Update Log</h1>
-            <p>Developer: libmysql | <a href="index.html" class="nav-link">Return to Main Page</a></p>
+            <p>Developer: libmysql | <a href="libmysql64.html" class="nav-link">Return to Main Page</a></p>
         </header>
         
         <div class="update-log">
