--- a/index.html
+++ b/index.html
@@ -942,8 +942,7 @@
                 <ul>
                     <li><a href="#features" class="active">About</a></li>
                     <li><a href="#about">Services</a></li>
-                    <li><a href="libmysql64.html">libmysql64</a></li>
-                    <li><a href="gradientf.html">Gradientf</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
         </div>
@@ -959,8 +958,7 @@
                 <div class="hero-buttons slide-up delay-3">
                     <a href="#features" class="btn btn-primary"><i class="fas fa-star"></i> About</a>
                     <a href="#about" class="btn btn-secondary"><i class="fa-solid fa-cart-shopping"></i> Services</a>
-                    <a href="libmysql64.html" class="btn btn-secondary"><i class="fa-solid fa-skull"></i> libmysql64</a>
-                    <a href="gradientf.html" class="btn btn-secondary"><i class="fa-solid fa-palette"></i> Gradientf</a>
+                    <a href="projects.html" class="btn btn-secondary"><i class="fa-solid fa-gear"></i> Projects</a>
                 </div>
             </div>
         </div>
@@ -1010,8 +1008,8 @@
                 <h2 class="section-title fade-in">Services</h2>
                 
                     <div class="about-text fade-in delay-1">
-                        <p>Unfortunately I am no longer providing web coding services as I have dedicated all my time to PurpX project - the best online casino in all of Azerbaijan!</p>
-                        <p>on Github Pages I also add various useful sites - utilities, from software I created NucleusKMS using the BATCH programming language. You can download NucleusKMS on nucleuskms.github.io</p>
+                        <p>I regret that I no longer provide coding services and will not in the near future, even for a large sum I will not accept any business, I like to work only for myself.</p>
+                        <p>If you have any questions, I can help you.</p>
                         <div class="stats">
                             <div class="stat fade-in delay-2">
                                 <div class="stat-number">5</div>
@@ -1072,11 +1070,9 @@
                     <a href="https://github.com/libmysql" class="social-link"><i class="fab fa-github"></i></a>
                 </div>
                 <div class="footer-links">
-                    <p class="footer-description">PurpX</p>
                     <a href="#" class="footer-link">Privacy Policy</a>
                     <a href="#" class="footer-link">Terms of Use</a>
                     <a href="#" class="footer-link">FAQ</a>
-                    <a href="#" class="footer-link">Vacancies</a>
                 </div>
                 <p class="copyright">© 2025 libmysql. All rights reserved.</p>
             </div>
