--- a/projects.html
+++ b/projects.html
@@ -511,6 +511,26 @@
     <main class="projects-section">
         <div class="container">
             <h1 class="section-title fade-in">My <span>Projects</span></h1>
+
+                        <div class="projects-grid">
+                <!-- 0 praekt -->
+                <div class="project-card fade-in">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR80lXXH6jDF3YtJgMD1HLeiT4xZQHDhOh-nw&s" alt="nucleuskms" class="project-image">
+                    <div class="project-content">
+                        <h3 class="project-title">LunarisPay</h3>
+                        <p class="project-description">LunarisPay is a service for replenishing the Steam balance for citizens of the Russian Federation. 
+The project is currently in the development stage, the frontend part is already done. 
+Half of the server code is also written. At the moment there is only 1 method of replenishment and this is cryptomus.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">( ͡° ͜ʖ ͡°)</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://localhost/" class="project-link project-link-primary" target="_blank">
+                                <i class="fas fa-external-link-alt"></i> Visit Site
+                            </a>
+                        </div>
+                    </div>
+                </div>
             
             <div class="projects-grid">
                 <!-- 1 praekt -->
